[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit_dl"
version = "0.1.0"
description = ""
authors = [
    {name = "federicocunico",email = "federico@cunico.net"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "praw (>=7.8.1,<8.0.0)"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["reddit_dl"]
